# django_and_react_first_project

./: manage.py  pyproject.toml
authentication/: models.py  serializer.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
django_and_react/: asgi.py  settings.py  urls.py  wsgi.py
posts/: admin.py  models.py  serializer.py  urls.py  views.py
posts/migrations/: 0001_initial.py
